# mcp-proton-email

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  llms-install.md  mkdocs.yml  pyproject.toml  smithery.yaml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: configuration.md  development.md  index.md  security.md  tools.md  troubleshooting.md
scripts/: live_smoke_read.py  live_smoke_write.py
src/mcp_proton_email/: __init__.py  __main__.py  audit.py  compose.py  config.py  errors.py  extract.py  fetch.py  imap.py  mailmsg.py  sanitize.py  secrets.py  server.py  state.py  tools_read.py  tools_send.py  tools_write.py
tests/: test_compose_and_parse.py  test_config.py  test_draft_tools.py  test_imap_internals.py  test_multi_account.py  test_organize_tools.py  test_pdf_bounds.py  test_policy.py  test_sanitize.py  test_save_attachment.py  test_secrets_discovery.py  test_send_gate.py  test_tls.py
