[project]
name = "mcp-proton-email"
version = "0.1.0"
description = "Safe MCP server for Proton Mail via Proton Bridge (localhost IMAP/SMTP)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Alex Pradas Gómez", email = "alex@pradas.eu" }
]
keywords = ["mcp", "proton", "protonmail", "email", "claude", "proton-bridge", "imap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.4",
    "imapclient>=3.1.0",
    "pypdf>=6.14.2",
]

[project.urls]
Homepage = "https://github.com/alex-pradas/mcp-proton-email"
Repository = "https://github.com/alex-pradas/mcp-proton-email"
Issues = "https://github.com/alex-pradas/mcp-proton-email/issues"

[project.scripts]
mcp-proton-email = "mcp_proton_email.__main__:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
