[project]
name = "mcp-proton-email"
version = "0.1.0"
description = "Safe MCP server for Proton Mail via Proton Bridge (localhost IMAP/SMTP)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Alex Pradas Gómez", email = "alex@pradas.eu" }]
keywords = ["mcp", "proton", "protonmail", "email", "claude", "proton-bridge", "imap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: MacOS X",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
]
dependencies = [
    "fastmcp>=3.4.4",
    "imapclient>=3.1.0",
    "pypdf>=6.14.2",
]

[project.urls]
Homepage = "https://github.com/alex-pradas/mcp-proton-email"
Repository = "https://github.com/alex-pradas/mcp-proton-email"
Issues = "https://github.com/alex-pradas/mcp-proton-email/issues"

[project.scripts]
mcp-proton-email = "mcp_proton_email.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_proton_email"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=4.0.0",
]
